# gcal-api-client

./: .gitignore  README.md  flake.nix  go  justfile  pyproject.toml  ruff.toml
src/gcal_manager/: account.py  calendar.py  calendars.py  context.py  context_id.py  event.py  event_id.py  google_account.py  google_calendar.py  task.py  task_id.py
src/gcal_manager/_services/: __init__.py  account_service.py  base_service.py  calendar_service.py  context_service.py  event_service.py  google_auth.py
src/gcal_manager/commands/: __init__.py  search_command.py
src/gcal_manager/domain/commands/: search_command.py
src/gcal_manager/domain/model/: account_id.py  calendar.py  calendar_id.py  event.py  task_id.py
src/gcal_manager/infrastructure/gateways/: google_auth.py  google_calendar_gateway.py
tests/integration/: __init__.py  test_google_account.py  test_google_calendar.py
tests/integration/gateways/: __init__.py  test_google_auth.py  test_google_calendar_gateway.py
tests/integration/services/: test_account_service.py  test_calendar_service.py  test_context_service.py  test_event_service.py  test_google_auth.py
tests/unit/: __init__.py
tests/unit/commands/: test_search_command.py
tests/unit/domain/commands/: test_search_command.py
