[project]
name = "gcal-manager"
version = "0.1.0"
description = "Add, edit or delete events from your Google Calendars"
license = ""
authors = ["Jen Scobie <jenscobie@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jenscobie/gcal-manager"
packages = [
    { include = "gcal_manager", from = "src" },
]
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.155.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "dataclass-wizard>=0.32.1",
    "dateparser>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
